# SimpleEnvs-Python

./: .buildinfo  .env.example  CNAME  Contributing.md  LICENSE  README.md  VersionManagemenGuide.md  api-reference.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js  security.html  version_bumper.py
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  05-performance.yml  config.yml
.github/workflows/: benchmark.yml  ci.yml  ci_debug.yml  deploy.yml  docs.yml  security_tests.yml  version_bump.yaml
_sources/: index.md.txt  installation.md.txt  quickstart.md.txt  security.md.txt
_static/: custom.css
devtools/: version_bumper.py
docs/: Makefile  api-reference.md  build.py  conf.py  index.md  installation.md  quickstart.md  requirements.txt  security.md
examples/: fastapi_example.py
src/simpleenvs/: __init__.py  benchmark.py  constants.py  exceptions.py  manager.py  py.typed  secure.py  simple.py  utils.py  vuln_test.py
src/simpleenvs/exceptions/: __init__.py
src/simpleenvs/filestream/: FileReader.py  __init__.py
src/simpleenvs/loaders/: manager.py  secure.py  simple.py
src/simpleenvs/typings/: constants.pyi  exceptions.pyi
src/simpleenvs_python/: __init__.py  constants.py  exceptions.py  simple.py  utils.py
tests/: load.py  test_comprehensive.py  test_missing_coverage.py
